<resources>
    <string name="app_name">e-doświadczenia w fizyce</string>
    <string name="txt_list_ed">lista e-doświadczeń</string>
    <string name="ed_name_wahadlo">wahadło matematyczne</string>
    <string name="ed_name_lawa">ława optyczna</string>
    <string name="ed_name_rownia">równia pochyła</string>
    <string name="ed_name_zderzenia">zderzenia sprężyste i niesprężyste</string>
    <string name="ed_name_rzuty">rzuty</string>
    <string name="ed_name_astro">ruch ciał niebieskich</string>
    <string name="ed_name_ciecze">mechanika cieczy</string>
    <string name="ed_name_bryla">bryła sztywna</string>
    <string name="ed_name_gazy">właściwości gazów</string>
    <string name="ed_name_drgania">drgania mechaniczne</string>
    <string name="ed_name_pole_elektryczne">pole elektryczne</string>
    <string name="ed_name_obwody_pradu_stalego">obwody prądu stałego</string>
    <string name="ed_name_dzwiek">laboratorium dzwięku</string>
    <string name="ed_name_kalorymetria">kalorymetria</string>
    <string name="ed_name_kondensatory">kondensatory</string>
    <string name="ed_name_pole_magnetyczne">pole magnetyczne</string>
    <string name="ed_name_cewki_i_indukcja">cewki i indukcja</string>
    <string name="ed_name_optyka_geometryczna">zjawisko polaryzacji i załamania światła</string>
    <string name="ed_name_rlc">układy rlc</string>
    <string name="ed_name_korpuskularna">korpuskularna natura światła i materii</string>
    <string name="ed_name_interferencja">interferencja i dyfrakcja światła</string>
    <string name="ed_name_fizyka_atomowa">spektroskopia</string>
    <string name="ed_name_einstein">eksperymenty myślowe einsteina</string>
    <string name="btn_yes">tak</string>
    <string name="btn_no">nie</string>
    <string name="btn_ok">ok</string>
    <string name="btn_close">zamknij</string>
    <string name="btn_view_www">strona www</string>
    <string name="btn_back">&#160;&#160;&#160;powrót</string>
    <string name="btn_info">informacje</string>
    <string name="btn_list_ed">e-doświadczenia</string>
    <string name="btn_close_app">zakończ program</string>
    <string name="btn_about_project">o projekcie</string>
    <string name="btn_about_ed">o e-doświadczeniach</string>
    <string name="btn_about_app">o aplikacji</string>
    <string name="btn_www_project">strona www</string>
    <string name="btn_facebook">facebook</string>
    <string name="btn_run_ed">uruchom</string>
    <string name="btn_run_manual">wyświetl podręcznik</string>
    <string name="txt_title1">        aplikacja wykonana w ramach innowacyjnego projektu testującego pt. „e-doświadczenia w fizyce”,
        \nwspółfinansowanego ze środków unii europejskiej w ramach europejskiego funduszu społecznego
</string>
    <string name="txt_title2">pomysł i realizacja:</string>
    <string name="txt_title3">        politechnika gdańska, wydział fizyki technicznej i matematyki stosowanej\n
        przy wsparciu young digital planet sa oraz l.c.g. malmberg b.v.
</string>
    <string name="info_choose">
<![cdata[
<h1><font color="#22dafe">e-doświadczenia w fizyce</font></h1>
<b>wybierz informacje do wyświetlenia, korzystając z menu po lewej stronie.</b>
         ]]>
    </string>
    <string name="info_project_text">
<![cdata[
<h1><font color="#22dafe">e-doświadczenia w fizyce</font><br/>o projekcie</h1>

w ramach innowacyjnego projektu testującego pt. <b>„e-doświadczenia w fizyce”</b> wytwarzamy oraz testujemy
w wybranych szkołach ponadgminazjalnych nowatorskie rozwiązania programowe,
polegające na (testowym) włączeniu do lekcji fizyki tzw. <b>e-doświadczeń</b> &minus;
wirtualnych doświadczeń fizycznych, jako uzupełnienie doświadczeń rzeczywistych.
następnie będziemy starali się o włączenie e-doświadczeń do głównego nurtu polityki oświatowej,
tzn. planujemy sprawić, żeby stały się one częścią programów nauczania fizyki
w szkołach ponadgimnazjalnych.<br/><br/>
e-doświadczenia będą sukcesywnie produkowane i testowane do końca 2012 roku.
swoim zakresem będą obejmowały większość zagadnień omawianych na lekcjach fizyki w szkołach
ponadgimnazjalnych, w tym zagadnienia objęte rozszerzonym programem nauczania.<br/><br/>

pomysł na projekt narodził się w wyniku przeprowadzonej analizy i diagnozy problemów związanych
z nauczaniem fizyki w polskich szkołach. ideą przewodnią projektu jest znana wszystkim maksyma konfucjusza:
<b>„powiesz mi &minus; wkrótce zapomnę, pokażesz mi &minus; może zapamiętam,
pozwolisz dotknąć a zrozumiem”.</b><br/></br>
        ]]>
    </string>
    <string name="info_ed_text">
<![cdata[
<h1><font color="#22dafe">e-doświadczenia w fizyce</font><br/>o e-doświadczeniach</h1>
głównym produktem projektu jest <b>zestaw 23 wirtualnych e-doświadczeń z fizyki</b>,
w postaci programów komputerowych, obejmujących różne działy fizyki.
programy te są głównie przeznaczone do uruchamiania przy użyciu klasycznych komputerów,
jednak podjęliśmy próbę przeniesienia ich na tablety (choć wiążą się z tym pewne ograniczenia, opisane
w zakładce „o aplikacji”).<br/><br/>

mocno podkreślamy, że absolutnie <b>nie chcemy zastępować doświadczeń rzeczywistych</b>
(są one niezastąpione w dydaktyce), chcemy je wspierać.
e-doświadczenia mają na celu pokazanie zagadnień fizycznych w szerszej perspektywie.
dzięki swoim możliwościom pozwolą bowiem na głębsze zrozumienie problemów, pozwolą na budowanie lepiej rozumianych
modeli, ciągów przyczynowo-skutkowych i zbiorów zależności, niezbędnych do opisu zjawisk fizycznych.<br/><br/>

dzięki e-doświadczeniom nauczyciele będą mogli zilustrować daną partię materiału teoretycznego
przy pomocy komputera, bez obawy zniszczenia drogiego sprzętu doświadczalnego.
z kolei uczniowie będą mogli samodzielne powtórzyć dane ćwiczenie w domu.<br/><br/>

przewidziana jest <b>daleko idąca możliwość ingerencji w przebieg e-doświadczeń</b>,
co umożliwia uczniowi przyswojenie wiedzy oraz pobudzenie i rozwinięcie zainteresowań badawczych. <br/><br/>

staramy się, aby e-doświadczenia były <b>w jak największym stopniu zbliżone do rzeczywistości</b>.
wpisują się one w schemat <b>zaprojektuj - zbuduj – wykonaj – przeanalizuj – przedstaw wyniki</b>,
gdzie istotne jest uczenie się na błędach. chcemy bowiem zmusić uczniów do działania, nawet jeśli sprowadzałoby
się to do działania metodą prób i błędów. zgodnie z naszym doświadczeniem, uzyskanie nawet niewłaściwych wyników,
które skonfrontowane z tymi prawidłowymi zmuszą do myślenia „gdzie i jaki popełniłem błąd?”,
ma ogromną wartość dydaktyczną: motywuje do wyciągania wniosków i ciągłych poszukiwań właściwego rozwiązania
problemu, wymuszając w ten sposób aktywność naukową.<br/><br/>

wszystkim e-doświadczeniom towarzyszą <b>podręczniki w formie zeszytów ćwiczeń</b>. gorąco zachęcamy do zapoznania
się z nimi jeszcze przed uruchomieniem danego e-doświadczenia.<br/><br/>

        ]]>
    </string>
    <string name="info_app_text">
<![cdata[
<h1><font color="#22dafe">e-doświadczenia w fizyce</font><br/>o aplikacji</h1>

e-doświadczenia produkowane są w technologii <b>adobe flash / adobe air</b>, dzięki czemu mogą być używane
na większości komputerów, niezależnie od używanego systemu operacyjnego czy rodzaju procesora.
niestety, technologia ta na tabletach daleka jest od doskonałości - występują ograniczenia związane
z wydajnością aplikacji oraz z dostosowaniem jej do ekranów dotykowych.<br/><br/>
podczas używania e-doświadczeń <b>mogą zatem pojawić się następujące problemy:</b><br/>
&bull; niewystarczająca wydajność w e-doświadczeniach wykorzystujących grafikę 3d
(np. wahadło matematyczne, ruch ciał niebieskich), skutkująca „klatkowaniem” animacji,<br/>
&bull; utrudniony dostęp do niektórych, niewielkich elementów (np. filtr w ławie optycznej); czasem trzeba kilku
prób, aby „podnieść” dany element,<br/>
&bull; nie można uruchamiać podręczników z wnętrza e-doświadczeń; w zamian zostały one udostępnione
bezpośrednio z aplikacji.<br/><br/>

przed uruchomieniem, dane e-doświadczenie jest pobierane z internetu do pamięci wewnętrznej urządzenia.
jest to operacja jednorazowa, do momentu skasowania go z pamięci bądź opublikowania nowszej wersji.<br/><br/>

<font color="#22dafe">autor aplikacji</font><br/>
paweł syty &minus; politechnika gdańska, wydział fizyki technicznej i matematyki stosowanej<br/><br/>
<font color="#22dafe">opracowanie graficzne aplikacji</font><br/>
rafał buczek &minus; crea.pl<br/><br/>
<font color="#22dafe">opracowanie i produkcja e-doświadczeń:</font><br/>
politechnika gdańska, wydział fizyki technicznej i matematyki stosowanej<br/>
young digital planet sa<br/>
l.c.g. malmberg b.v. (holandia)
        ]]>
    </string>
    <string name="pokl_name">program operacyjny kapitał ludzki</string>
    <string name="pokl_text">
<![cdata[
program kapitał ludzki jest jednym z programów służących realizacji narodowych strategicznych ram odniesienia
2007-2013 i obejmuje całość interwencji europejskiego funduszu społecznego (efs) w polsce. stanowi on odpowiedź
na wyzwania, jakie przed państwami członkowskimi ue, w tym również polską, stawia odnowiona strategia lizbońska.
<br/><br/>
do wyzwań tych należą: uczynienie z europy bardziej atrakcyjnego miejsca do lokowania inwestycji
i podejmowania pracy, rozwijanie wiedzy i innowacji oraz tworzenie większej liczby trwałych miejsc pracy.
        ]]>
    </string>
    <string name="efs_name">europejski fundusz społeczny</string>
    <string name="efs_text">
<![cdata[
europejski fundusz społeczny (efs) jest jednym z funduszy strukturalnych ue. został stworzony, by redukować
różnice w zamożności i jakości życia we wszystkich państwach członkowskich i regionach ue.<br/><br/>
fundusz promuje spójność gospodarczą i społeczną oraz promocją zatrudnienia w ue. pomaga państwom członkowskim,
sprawiając, że siła robocza i firmy są lepiej przygotowane do stawienia czoła nowym, globalnym wyzwaniom.
        ]]>
    </string>
    <string name="pg_name">politechnika gdańska</string>
    <string name="pg_text">
<![cdata[
<b>największa i najstarsza w północnej polsce państwowa uczelnia wyższa o profilu technicznym,
z siedzibą w gdańsku.</b><br/><br/>
obejmuje 9 wydziałów, na których studiuje ponad 24 tysiące studentów na studiach
inżynierskich i magisterskich (stacjonarnych i niestacjonarnych), a także ponad 400 słuchaczy studiów
doktoranckich. dodatkowo, prowadzona jest na szeroką skalę
wymiana międzynarodowa studentów i pracowników.<br/><br/>
w ogólnopolskich rankingach uczelni wyższych
politechnika gdańska zajmuje od dawna jedno z czołowych miejsc.
        ]]>
    </string>
    <string name="ftims_name">wydział fizyki technicznej i matematyki stosowanej pg</string>
    <string name="ftims_text">
<![cdata[
<b>jeden z dziewięciu wydziałów politechniki gdańskiej.</b><br/><br/>
prowadzone kierunki studiów i specjalności:<br/><br/>
<b>fizyka techniczna</b><br/>
&bull; fizyka stosowana<br/>
&bull; konwersja energii<br/>
&bull; informatyka stosowana<br/>
&bull; nanotechnologia<br/>
&bull; fizyka środowiska<br/><br/>

<b>matematyka</b><br/>
&bull; matematyka stosowana<br/>
&bull; matematyka finansowa<br/>
&bull; biomatematyka<br/><br/>

<b>inżynieria materiałowa</b><br/>
&bull; inżynieria materiałów funkcjonalnych<br/>
&nbsp;&nbsp;(wspólnie z wydziałami: chemicznym<br/>&nbsp;&nbsp;i mechanicznym)<br/><br/>

absolwenci wydziału są cenionymi specjalistami i łatwo znajdują zatrudnienie w różnych dziedzinach przemysłu.
        ]]>
    </string>
    <string name="ydp_name">young digital planet sa (gdańsk)</string>
</resources>