<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:background="@drawable/tlo_info">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp">

        <TableRow>

            <Button
                android:id="@+id/buttonBackInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:gravity="left|center"
                android:paddingLeft="30dp"
                android:drawableLeft="@drawable/ic_back_small"
                style="@style/InfoButtonBack"/>

        </TableRow>

        <TableRow android:layout_marginTop="60dp">

            <Button
                android:id="@+id/buttonProjectInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_about_project"
                android:gravity="left|center"
                android:paddingLeft="40dp"
                android:textSize="20dp"
                style="@style/InfoButton"/>

        </TableRow>

        <TableRow android:layout_marginTop="-10dp">

            <Button
                android:id="@+id/buttonEDInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_about_ed"
                android:gravity="left|center"
                android:paddingLeft="40dp"
                android:textSize="20dp"
                style="@style/InfoButton"/>

        </TableRow>

        <TableRow android:layout_marginTop="-10dp">

            <Button
                android:id="@+id/buttonAppInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_about_app"
                android:gravity="left|center"
                android:paddingLeft="40dp"
                android:textSize="20dp"
                style="@style/InfoButton"/>

        </TableRow>

        <TableRow android:layout_marginTop="-10dp">

            <Button
                android:id="@+id/buttonWWWInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:paddingLeft="40dp"
                android:text="@string/btn_www_project"
                android:textSize="20dp"
                style="@style/InfoButton"/>

        </TableRow>

        <TableRow android:layout_marginTop="-10dp">

            <Button
                android:id="@+id/buttonFacebookInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_facebook"
                android:gravity="left|center"
                android:paddingLeft="40dp"
                android:paddingRight="22dp"
                android:textSize="20dp"
                android:drawableRight="@drawable/ic_fcb"
                style="@style/InfoButton"/>
                
        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="80dp"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:lineSpacingMultiplier="1.18"
            android:scaleType="centerCrop"/>

    </ScrollView>

</LinearLayout>